--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -60,6 +60,7 @@
     width: 16px;
     height: 16px;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .header__search input {
@@ -80,6 +81,7 @@
     background-color: transparent;
     border: none;
     margin-right: 32px;
+    cursor: pointer;
 }
 
 .header__login .login {
@@ -89,6 +91,7 @@
     font-size: 16px;
     font-weight: 700;
     border-radius: 40px;
+    cursor: pointer;
 }
 
  /* PLAYLIST */
